# fluid_sim_nn

./: .editorconfig  .pylintrc  README.md
nn/: configurator.py  data.py  inference.py  model.py  render_state.py  scratch.py  train.py
sim/: .gitignore  meson.build
sim/src/: bin.h  custom_math.cpp  custom_math.h  kernels.h  main.cpp  particle.h  particle_render.cpp  particle_render.h  particle_system.cpp  particle_system.h  soil.cpp  soil.h  soil_particle.h  tools.cpp  tools.h
